# ref_struct

./: Cargo.toml  README.md
src/: args.rs  general.rs  lib.rs  struct_info.rs
tests/: cow_example.rs  serde_example.rs  std_example.rs  test.rs
